--- a/Inventory.API/Inventory.API.csproj
+++ b/Inventory.API/Inventory.API.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Inventory.DAL\Inventory.DAL.csproj" />
-    <ProjectReference Include="..\Inventory.Domain\Inventory.Domain.csproj" />
+    <ProjectReference Include="..\Inventory.Domain\Inventory.Models.csproj" />
     <ProjectReference Include="..\Inventory.Service\Inventory.Service.csproj" />
   </ItemGroup>
 
