--- a/Inventory.Service/Inventory.Service.csproj
+++ b/Inventory.Service/Inventory.Service.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Inventory.Domain\Inventory.Domain.csproj" />
+    <ProjectReference Include="..\Inventory.Domain\Inventory.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
